--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,6 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [
@@ -32,10 +31,7 @@
               "src/assets/js/slick.min.js",
               "src/assets/js/jquery.min.js",
               "src/assets/js/nouislider.min.js",
-              "src/assets/js/jquery.zoom.min.js",
-              "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/@popperjs/core/dist/umd/popper.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "src/assets/js/jquery.zoom.min.js"
             ]
           },
           "configurations": {
